# battle_ships

./: CMakeLists.txt  README.md
lib/: CMakeLists.txt
lib/Field/: CMakeLists.txt  Field.cpp  Field.hpp
lib/Field/Ship/: CMakeLists.txt  Ship.cpp  Ship.hpp
lib/Manager/: CMakeLists.txt  Manager.cpp  Manager.hpp
lib/Strategies/: CMakeLists.txt
lib/Strategies/ShipPlacementStrategies/: CMakeLists.txt  ShipPlacementStrategies.cpp  ShipPlacementStrategies.hpp
lib/Strategies/ShootingStrategies/: CMakeLists.txt  ShootingStrategies.cpp  ShootingStrategies.hpp
lib/Strategies/ShootingStrategies/CustomShooting/: CMakeLists.txt  CustomShooting.cpp  CustomShooting.hpp
lib/Strategies/ShootingStrategies/OrderedShooting/: CMakeLists.txt  OrderedShooting.cpp  OrderedShooting.hpp
lib/Structures/: CMakeLists.txt
lib/Structures/GameSettings/: CMakeLists.txt  GameSettings.hpp
lib/utils/: CMakeLists.txt
lib/utils/FileManager/: CMakeLists.txt  FileManager.cpp  FileManager.hpp
lib/utils/Handler/: CMakeLists.txt  Handler.cpp  Handler.hpp
lib/utils/Handler/Commands/: CMakeLists.txt  Commands.cpp  Commands.hpp
lib/utils/Response/: CMakeLists.txt  Response.cpp  Response.hpp
lib/utils/Response/Error/: CMakeLists.txt  Error.cpp  Error.hpp
lib/utils/WorkWithString/: CmakeLists.txt  WorkWithString.cpp  WorkWithString.hpp
